# Smart_Control

./: .gitignore  CMakeLists.txt  CVersion.cmake  main.cpp  version.cpp.in  version.h
check_rs485_app/: CMakeLists.txt  main.cpp
check_rs485_app/include/: DeviceEvent.h  Order.h  P_SIMPLE_DEVICE.h  Test.h
check_rs485_app/src/: P_SIMPLE_DEVICE.cpp  Test.cpp
cmake_modules/: FindTGUI.cmake
data/: form - Kopia (2).txt  form - Kopia.txt  form.txt
include/: Action.h  Action_data_struct.h  Argv_options.h  Asynchronous_write.h  CAL_STATE.h  Calendar.h  Com.h  Communication_log.h  Console.h  Date.h  Date_data_struct.h  Day.h  Device.h  Event.h  File_Communication_log.h  Funkcje_str.h  Logi.h  Main_window.h  Menu.h  Modes_data_struct.h  Modes_window.h  Parser.h  Przelacznik.h  Przelacznik_b.h  Przelacznik_c.h  Przelacznik_dogrzewanie.h  Przelacznik_e.h  Przelacznik_e_hysteresis.h  Przelacznik_ebledy.h  Przelacznik_el.h  Przelacznik_obroty.h  Przelacznik_odmrazanie.h  Przelacznik_s.h  Przelacznik_sekmin.h  Przelacznik_typ.h  Przelacznik_v.h  Sliders.h  WidgetSingleton.h  crc.h  icona.h  (+1 more)
include/Event_Manager/: Event_Manager.h
include/Event_Manager/Help/: Lock.h  Lock_device.h  Value_Manager.h
include/Event_Manager/Widgets/: Widget_Switch.h
include/P_SIMPLE/: P_SIMPLE.h  P_SIMPLE_Action.h  P_SIMPLE_Message.h
include/P_SIMPLE/Actions/: Reset_Action.h
include/rs232/: rs232.h
src/: Action.cpp  Argv_options.cpp  Asynchronous_write.cpp  Calendar.cpp  Com.cpp  Communication_log.cpp  Console.cpp  Date.cpp  Day.cpp  Device.cpp  Event.cpp  File_Communication_log.cpp  Funkcje_str.cpp  Logi.cpp  Main_window.cpp  Menu.cpp  Modes_window.cpp  Parser.cpp  Przelacznik.cpp  Przelacznik_b.cpp  Przelacznik_c.cpp  Przelacznik_dogrzewanie.cpp  Przelacznik_e.cpp  Przelacznik_e_hysteresis.cpp  Przelacznik_ebledy.cpp  Przelacznik_el.cpp  Przelacznik_obroty.cpp  Przelacznik_odmrazanie.cpp  Przelacznik_s.cpp  Przelacznik_sekmin.cpp  Przelacznik_typ.cpp  Przelacznik_v.cpp  Sliders.cpp  crc.cpp
src/Event_Manager/: Event_Manager.cpp
src/Event_Manager/Help/: Lock.cpp  Lock_device.cpp
src/P_SIMPLE/: P_SIMPLE.cpp  P_SIMPLE_Action.cpp  P_SIMPLE_Message.cpp
src/P_SIMPLE/Actions/: Reset_Action.cpp
src/P_SIMPLE/Unix/: P_COMImpl.cpp  P_COMImpl.h
src/P_SIMPLE/Win32/: P_COMImpl.cpp  P_COMImpl.h
src/rs232/: rs232.cpp
